[gd_scene load_steps=4 format=3 uid="uid://de7d57ns2qobq"]

[ext_resource type="Script" uid="uid://f4yku5e8dprf" path="res://game_elements/poop_effects/ice/ice_explosion.gd" id="1_4yosi"]
[ext_resource type="Shape2D" uid="uid://d10nhly70iar1" path="res://resources/shapes/ice_explosion_shape.tres" id="2_xsauc"]

[sub_resource type="Gradient" id="Gradient_qsof7"]
offsets = PackedFloat32Array(0, 0.269113, 1)
colors = PackedColorArray(0, 0.290196, 1, 1, 0, 1, 1, 1, 0, 0.513726, 0.807843, 1)

[node name="IceExplosion" type="Node2D" node_paths=PackedStringArray("ice_particles", "explosion_collision_shape") groups=["ice"]]
script = ExtResource("1_4yosi")
ice_particles = NodePath("ParticlesScaling/Particles")
explosion_collision_shape = NodePath("ExplosionArea/ExplosionAreaCollisionShape")

[node name="ExplosionArea" type="Area2D" parent="." groups=["ice"]]

[node name="ExplosionAreaCollisionShape" type="CollisionShape2D" parent="ExplosionArea"]
shape = ExtResource("2_xsauc")

[node name="ParticlesScaling" type="Node2D" parent="."]
scale = Vector2(3, 3)

[node name="Particles" type="CPUParticles2D" parent="ParticlesScaling"]
emitting = false
amount = 10000
lifetime = 0.8
one_shot = true
speed_scale = 2.0
randomness = 1.0
fixed_fps = 60
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
scale_amount_min = 0.0
scale_amount_max = 6.0
color_ramp = SubResource("Gradient_qsof7")

[connection signal="area_entered" from="ExplosionArea" to="." method="_on_explosion_area_area_entered"]
[connection signal="area_exited" from="ExplosionArea" to="." method="_on_explosion_area_area_exited"]
